# fisher-kpp-rk4

./: .gitignore  README.md  pyproject.toml
notebooks/: fisher_kpp_rk4_demo.ipynb
scripts/: run_convergence.py  run_cross_section_view.py  run_demo.py
src/fisher_kpp_rk4/: __init__.py  config.py  solver.py  visualization.py
