[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fisher-kpp-rk4"
version = "0.1.0"
description = "1D Fisher-KPP solver using method of lines, finite differences, and RK4."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
demo = [
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
